# RustyWheels

./: Cargo.toml
src/: main.rs
src/scripts/: compile-prowler.ps1  publish-prowler.ps1  test-script.ps1
