[package]
name = "rust_harrier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.22.0", features = ["persistence"] }
git2 = "0.17.2"
powershell_script = "1.1.0"
serde = { version = "1.0.183", features = ["derive"] }
